...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUg-dk-ox1">
                                <rect key="frame" x="334" y="28" width="25" height="25"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="SwitchCamera" image="switch-camera2"/>
                                <connections>
                                    <action selector="switchCamera:" destination="9pv-A4-QxB" eventType="touchUpInside" id="noV-JA-iVS"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OF9-cz-EfV">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
...
                                <rect key="frame" x="131" y="430" width="112" height="112"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dQ-GK-xa0">
                                <rect key="frame" x="302" y="552" width="53" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                <state key="normal" title="Stop"/>
                                <connections>
                                    <action selector="stopDetecting:" destination="9pv-A4-QxB" eventType="touchUpInside" id="0XU-j1-ugJ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q0x-mo-Vwr">
                                <rect key="frame" x="20" y="552" width="53" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <state key="normal" title="Start"/>
                                <connections>
                                    <action selector="startDetecting:" destination="9pv-A4-QxB" eventType="touchUpInside" id="duL-VO-l6G"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="154" y="144" width="198" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gcr-y9-wJi">
                                <rect key="frame" x="85.5" y="28" width="205" height="42"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Photo" image="camera" selectedImage="camera" id="0RT-DA-4Xb"/>
                    <connections>
                        <outlet property="detectedEmotionValue" destination="x1H-Bt-Ewu" id="c3L-8d-37u"/>
                        <outlet property="detectedEmotionsLabel" destination="86N-Xv-dP6" id="eUt-BQ-iYg"/>
                        <outlet property="imageView" destination="qVK-nc-Ztd" id="B1w-bc-pWx"/>
                    </connections>
                </viewController>
...
